headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  ports:
  - targetPort: 27017
    port: 27017
  clusterIP: None  
  selector:
    app: mongo
