mongoDB-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express

spec:
  template:
    metadata:
      name: mongo-express
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
  replicas: 3
  selector:
    matchLabels:
      app: mongo-express

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
spec:
  ports:
  - targetPort: 8081
    port: 8081
  selector:
    app: mongo-express
