mongodb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  template:
    metadata:
      name: mongodb
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  type: ClusterIP
  ports:
  - targetPort: 27017
    port: 27017
  selector:
    app: mongodb
